--- a/JavaScript/style.css
+++ b/JavaScript/style.css
@@ -20,7 +20,8 @@ h1 {
 
 body {
     height: 100vh;
-    background-image: linear-gradient(to top left, #382B2B 0%, #36647F 100%);
+/*    background-image: linear-gradient(to top left, #382B2B 0%, #36647F 100%);*/
+    background-color: dimgray;
     display:block;
     justify-content: center;
     align-items: center;
