--- a/JavaScript/public/style.css
+++ b/JavaScript/public/style.css
@@ -1,194 +1,713 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-}
-
-h1 {
-    font-size: 24px;
-    font-weight: 600;
-    color: white;
-    margin-top: 30px;
-}
-
 body {
-    height: 100vh;
-/*    background-image: linear-gradient(to top left, #382B2B 0%, #36647F 100%);*/
-    background-color: dimgray;
-    display:block;
-    justify-content: center;
-    align-items: center;
+  font-family: "Roboto", sans-serif;
+  color: #3a3f52;
 }
 
-.footer{
-    color: white;
-    margin: 5px;
+h2 {
+  font-size: 44px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 25px;
+}
+
+h5 {
+  font-size: 16px;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+  color: #53627c;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+b {
+  font-weight: 700;
+}
+
+section {
+  padding: 100px 0px;
+}
+
+.title-block {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.title-block p {
+  font-size: 20px;
+  font-weight: 300;
+  color: #8da2b5;
+  margin-bottom: 0px;
+}
+
+.divider {
+  padding: 2rem 0 0;
+  margin: 2rem 0 0;
+  border-top: 1px solid #3c3f45;
+}
+
+.divider-light {
+  padding: 2rem 0 0;
+  margin: 2rem 0 0;
+  border-top: 1px solid #edf1f2;
+}
+
+/* ==============================================
+   2. Navbar 
+===============================================*/
+
+.custom-navbar {
+  background-color: #ffffff !important;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
+  height: 70px;
+  max-height: 70px;
+}
+
+.navbar-toggler {
+  font-size: 38px;
+  background-color: transparent;
+}
+
+.navbar-toggler:focus {
+  text-decoration: none;
+  outline: none;
+}
+
+.navbar-toggler-icon {
+  color: #ffffff;
+}
+
+.navbar-collapse {
+  background-color: #ffffff;
+}
+
+.nav-custom-link {
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+  margin-top: 5px;
+}
+
+.navbar a {
+  color: #53627c !important;
+}
+
+.nav-right {
+  float: right;
+}
+
+/* ==============================================
+   3. Buttons
+===============================================*/
+
+.btn {
+  font-size: 14px;
+  font-weight: 400;
+  border-radius: 3px !important;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.05), 0 1px 2px 0 rgba(0, 0, 0, 0.08);
+}
+
+.btn:hover {
+  text-decoration: none;
+}
+
+.btn-regular {
+  background-color: #0095f7;
+  color: #ffffff;
+  padding: 10px 25px;
+  letter-spacing: 0.1em;
+  margin-top: 25px;
+  display: inline-block;
+}
+
+.btn-regular:hover {
+  background-color: #0191f0;
+  color: #ffffff;
+}
+
+.btn-demo {
+  color: #ffffff;
+  background-color: #242234;
+  letter-spacing: 0.1em;
+  padding: 15px 48px;
+  display: inline-block;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.btn-demo:hover {
+  color: #ffffff;
+  background-color: #242234;
+}
+
+.btn-demo-small {
+  font-size: 12px;
+  background-color: #242234;
+  padding: 1px 4px;
+}
+
+.btn-demo-small:hover {
+  background-color: #242234;
+}
+
+.btn-demo-small a {
+  color: #ffffff !important;
+}
+
+.btn-buy {
+  color: #ffffff;
+  background-color: #0095f7;
+  letter-spacing: 0.1em;
+  padding: 15px 48px;
+  display: inline-block;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.btn-buy:hover {
+  background-color: #0191f0;
+  color: #ffffff;
+}
+
+/* ==============================================
+   4. Hero
+===============================================*/
+
+#hero {
+  background-color: #f6f8f9;
+}
+
+#hero h1 {
+  font-size: 50px;
+  font-weight: 300;
+}
+
+#hero p {
+  font-size: 24px;
+  font-weight: 300;
+  color: #8da2b5;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+#hero span {
+  font-weight: 400;
+  color: #0095f7;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+/* ==============================================
+   5. Marketing
+===============================================*/
+
+#marketing p {
+  font-size: 20px;
+  font-weight: 300;
+  color: #8da2b5;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+#marketing span {
+  font-weight: 400;
+  color: #0095f7;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+
+.content-box {
+  padding: 60px 20px;
+}
+
+/* ==============================================
+   6. Testimonials
+===============================================*/
+
+#testimonials {
+  background-color: #f6f8f9;
+  border-top: 1px solid #f8f9fb;
+  border-bottom: 1px solid #f8f9fb;
+}
+
+.testimonial-box {
+  background-color: #ffffff;
+  box-shadow: 0 0 1px 0 rgba(0, 12, 32, 0.04),
+    0 10px 16px 0 rgba(10, 31, 68, 0.06);
+  border-radius: 20px;
+  padding: 20px 30px;
+  margin-top: 30px;
+}
+
+.testimonial-box h6 {
+  font-size: 22px;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+.testimonial-box p {
+  font-size: 16px;
+  font-weight: 300;
+  margin-top: 25px;
+  line-height: 1.8;
+  padding: 0px;
+}
+
+.testimonial-box i {
+  color: #ffffff;
+}
+
+.testimonial-box small {
+  color: #8da2b5;
+  display: inline-block;
+}
+
+.testimonial-box span {
+  font-size: 14px;
+  color: #ffffff;
+}
+
+.rating {
+  background-color: #0095f7;
+  padding: 2px 12px;
+  border-radius: 50px;
+}
+
+.profile-picture {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.review-one {
+  background-image: url("images/profile-picture-one.jpg");
+}
+
+.personal-info {
+  padding: 5px 0 20px 0;
+  border-bottom: 1px solid #edf1f2;
+}
+
+/* ==============================================
+   7. Pricing
+===============================================*/
+
+.pricing-box {
+  background-color: #ffffff;
+  padding: 40px 20px;
+  border: 1px solid #f8f9fb;
+  border-radius: 6px;
+  box-shadow: 0 0 1px 0 rgba(0, 12, 32, 0.04),
+    0 10px 16px 0 rgba(10, 31, 68, 0.06);
+  margin-top: 30px;
+}
+
+.pricing-box h3 {
+  font-size: 22px;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+  color: #0095f7;
+}
+
+.pricing-box h6 {
+  font-size: 60px;
+  font-weight: 700;
+  color: #3a3f52;
+  margin-bottom: 0px;
+}
+
+.pricing-box p {
+  font-size: 17px;
+  margin-top: 15px;
+  padding: 0px;
+}
+
+.pricing-box ul {
+  padding-left: 10px;
+}
+
+.pricing-box li {
+  font-size: 14px;
+  font-weight: 300;
+  color: #8da2b5;
+  letter-spacing: 0.1em;
+}
+
+.pricing-box span {
+  font-weight: 500;
+  color: #0095f7;
+}
+
+.pricing-box small {
+  color: #8da2b5;
+  letter-spacing: 0.2em;
+}
+
+.pricing-box i {
+  font-size: 20px;
+  color: #0095f7;
+  margin-right: 10px;
+}
+
+.pricing-box .demo {
+  color: #6772e5 !important;
+}
+
+/* ==============================================
+   8. Call to Action
+===============================================*/
+
+#call-to-action {
+  background-image: url("images/call-to-action.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+}
+
+#call-to-action h2 {
+  color: #ffffff;
+}
+
+#call-to-action p {
+  font-size: 20px;
+  font-weight: 300;
+  color: #ffffff;
+  opacity: 0.8;
+  margin-bottom: 40px;
+}
+
+#call-to-action .title-block {
+  margin-bottom: 0px;
+}
+
+#call-to-action .btn-regular {
+  background-color: #ffffff !important;
+  color: #0095f7 !important;
+  padding: 15px 45px;
+}
+
+#call-to-action .title-block {
+  margin-bottom: 0px;
+}
+
+/* ==============================================
+   9. Footer
+===============================================*/
+
+footer {
+  background-color: #292c31;
+  padding: 60px 0;
+  color: #62656a;
+}
+
+footer h5 {
+  color: #aeb3bd;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin-bottom: 20px;
+}
+
+footer p {
+  font-size: 12px;
+  font-weight: 300;
+  color: #62656a;
+  text-align: justify;
+  padding: 0px;
+}
+
+footer li {
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.05em;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+
+footer a {
+  color: #62656a;
+}
+
+footer a:hover {
+  color: #0095f7;
+  text-decoration: none;
+}
+
+footer i {
+  font-size: 25px;
+  color: #62656a;
+  margin-right: 10px;
+}
+
+footer i:hover {
+  color: #0095f7;
+}
+
+footer small {
+  color: #62656a;
+  float: right;
+}
+
+.external-links {
+  color: #0095f7;
+}
+
+/* ==============================================
+   9. Media Queries
+===============================================*/
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+  h2 {
+    font-size: 34px !important;
+    margin-bottom: 20px;
+    line-height: 1.6;
+  }
+  .title-block h2,
+  p {
+    /* text-align: left; */
+    padding: 0px 20px;
+    text-align: center;
+  }
+
+  #call-to-action h2,
+  p {
+    text-align: left !important;
+    padding: 0 20px;
+  }
+
+  #call-to-action {
+    background-image: none;
+    background-color: #0095f7;
+  }
+
+  footer {
+    padding: 60px 25px;
+  }
+  footer h5 {
+    font-size: 18px;
+    margin-top: 30px;
+  }
+  footer li {
+    font-size: 16px;
+    margin-bottom: 15px;
+  }
+  footer p {
+    font-size: 16px;
+  }
+  footer i {
+    font-size: 30px;
+    margin-right: 20px;
+  }
+  footer small {
+    float: left;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  #hero h1 {
+    font-size: 34px !important;
+    margin-bottom: 20px;
+  }
+  #hero p {
+    font-size: 20px !important;
+  }
+}
+
+@media (max-width: 991px) {
+  .nav-right {
+    float: left;
+  }
+  .nav-custom-link {
+    border-bottom: 1px solid #eee;
+  }
+  .navbar-nav {
+    width: 100%;
+  }
+  .navbar-nav .nav-link {
+    padding: 20px 0;
+    text-align: left;
+  }
+
+  .btn-demo-small {
+    background-color: #ffffff;
+    border: 0px;
+    padding: 0px;
+    box-shadow: none;
+  }
+  .btn-demo-small:hover {
+    background-color: #ffffff;
+    border: 0px;
+    padding: 0px;
+    box-shadow: none;
+  }
+  .btn-demo-small a {
+    color: #53627c !important;
+  }
+  .nav-custom-link {
+    font-size: 13px;
+  }
+
+  .icon-mobile {
+    font-size: 18px;
+    float: right;
+  }
+
+  .navbar-collapse {
+    border-bottom: 1px solid #efefef;
+  }
+
+  .nav-logo-mobile {
+    margin: auto;
+    padding-right: 50px;
+  }
+
+  .nav-logo-desktop {
+    display: none;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .icon-mobile {
+    display: none;
+  }
+  .nav-logo-mobile {
+    display: none;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .hero-content {
+    margin-top: 100px;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .pricing-box h3 {
+    font-size: 17px;
+  }
+  .pricing-box p {
+    font-size: 14px;
+  }
+  .pricing-box li {
+    font-size: 12px;
+  }
+  .btn-buy {
+    font-size: 12px;
+    padding: 15px 20px;
+  }
+  .btn-demo {
+    font-size: 12px;
+    padding: 15px 20px;
+  }
+  .profile-picture {
+    width: 50px;
+    height: 50px;
+  }
+  .testimonial-box h6 {
+    font-size: 14px;
+    margin-left: 10px;
+  }
+  .testimonial-box span {
+    font-size: 12px;
+  }
+  .testimonial-box small {
+    font-size: 12px;
+    margin-top: 4px;
+    margin-left: 10px;
+  }
 }
 
 .header {
-    color: white;
-    font-size: 14px;
-    font-weight: 400;
+  background-color: black;
+  /* width: 100%; */
+  /* padding: 20; */
+  display: flexbox;
+  align-items: center;
 }
 
-main {
-    font-family: 'Nunito', sans-serif;
-    font-weight: 400;
-    height: 100vh;
-    color: #333;
-/*    margin: 5px;*/
-    display:block;
-    text-align: center;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 80rem;
-    height: 55rem;
-    background-color: rgba(255,255,255,0.5);
-    backdrop-filter: blur(200px);
-    filter: blur();
-    box-shadow: 0 3em 5rem rgba(0,0,0,0.25);
-    border-radius: 9px;
-    overflow: hidden;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
+.row {
+  flex: auto;
+  /* flex-direction: row; */
 }
 
-.scores {
-    letter-spacing: 0.1em;
+.img-fluid {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .m-btn {
-    margin: 5px;
-    width: 80px;
-    height: 30px;
-    background-color: white;
-    border-radius: 9px;
-    border-style: none;
+  padding: 20;
+  font-size: 12;
+  margin: 10;
+  /* color: Dodgerblue; */
 }
 
 .logo {
-    width: 200px;
-    height: 50px;
-    margin-top: 20px;
+  width: 300;
+  height: 75;
+  transform: scale(0.7);
+
+  align-self: center;
 }
 
-.btn {
-    background-color: #444;
-    border: none;
-    font-family: inherit;
-    font-size: 24px;
-    text-transform: uppercase;
-    font-weight: 600;
-    cursor: pointer;
-    border-radius: 9px;
-    padding: 10px;
-    margin: 5px;
-    width: 100px;
-    height: 100px;
-    box-shadow: 0 1.75rem 3.5rem rgba(0, 0, 0, 0.1);
+body {
+  margin: 0;
+  /* align-items: center; */
 }
 
-.btn:visited {
-    background-color: #fff;
+.group {
+  display: flex; /* displays flex-items (children) inline */
+  /* align-items: center; */
+  /* flex-wrap: wrap; enables their wrapping */
 }
 
-.game-options {
-/*    margin: 10px;*/
-    color: white;
-    font-size: 1.3rem;
-    align-items: baseline;
+.col {
+  flex: 1;
+} /* each 33.33% of the parent's width (3 columns) until the break at 768px */
+
+.first {
+  background: black;
+  /* padding: 20; */
+}
+.second {
+  background: #f6f8f9;
+}
+.third {
+  background: white;
 }
 
-/*
-.btn::first-letter {
-  font-size: 2.4rem;
-  display: inline-block;
-  margin-right: 0.7rem;
-}
-*/
+/* @media (max-width: 768px) {
+  .col {
+    flex: 0 1 50%;
+  } /* each 50% of the parent's width (2 columns) 
+} 
 
-/*
-.btn:focus {
-  outline: none;
-}
-*/
-
-/*
-.btn:active {
-  transform: translate(-50%, 3px);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
-}
-*/
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input { 
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-
+/* if you want for the third column to take the remaining space, just change the first number to 1 to enable growing/expanding of flex-items */
+/* @media (max-width: 320px) {
+  .col {
+    flex-basis: 100%;
+  } /* each 100% of the parent's width (1 column) 
+} */
